exemplo de utilizacao do IEEEtran

--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -1,4 +1,5 @@
-\documentclass[review]{elsarticle}
+%\documentclass[review]{elsarticle}
+\documentclass[review]{IEEEtran}
 
 \usepackage{lineno,hyperref}
 \usepackage{amssymb}
@@ -9,60 +10,7 @@
 \usepackage{setspace}
 \modulolinenumbers[5]
 
-
-
 \usepackage{float}
-
-
-\journal{European Journal of Operational Research}
-
-%%%%%%%%%%%%%%%%%%%%%%%
-%% Elsevier bibliography styles
-%%%%%%%%%%%%%%%%%%%%%%%
-%% To change the style, put a % in front of the second line of the current style and
-%% remove the % from the second line of the style you would like to use.
-%%%%%%%%%%%%%%%%%%%%%%%
-
-%% Numbered
-%\bibliographystyle{templates/model1-num-names}
-
-%% Numbered without titles
-%\bibliographystyle{templates/model1a-num-names}
-
-%% Harvard
-%\bibliographystyle{templates/model2-names.bst}\biboptions{authoryear}
-
-%% Vancouver numbered
-%\usepackage{templates/numcompress}\bibliographystyle{templates/model3-num-names}
-
-%% Vancouver name/year
-%\usepackage{numcompress}\bibliographystyle{templates/model4-names}\biboptions{authoryear}
-
-%% APA style
-%\bibliographystyle{templates/model5-names}\biboptions{authoryear}
-
-%% AMA style
-%\usepackage{templates/numcompress}\bibliographystyle{templates/model6-num-names}
-
-%% `Elsevier LaTeX' style
-\bibliographystyle{templates/elsarticle-num}
-%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\makeatletter
-\def\@author#1{\g@addto@macro\elsauthors{\normalsize%
-    \def\baselinestretch{1}%
-    \upshape\authorsep#1\unskip\textsuperscript{%
-      \ifx\@fnmark\@empty\else\unskip\sep\@fnmark\let\sep=,\fi
-      \ifx\@corref\@empty\else\unskip\sep\@corref\let\sep=,\fi
-      }%
-    \def\authorsep{\unskip,\space}%
-    \global\let\@fnmark\@empty
-    \global\let\@corref\@empty  %% Added
-    \global\let\sep\@empty}%
-    \@eadauthor={#1}
-}
-\makeatother
 
 \begin{document}
 
@@ -94,7 +42,6 @@ Goiabeiras, Vit\'oria, Esp\'irito Santo, Brasil 29075-910}
 \input{exp_data.tex}
 \input{exp_result.tex}
 \input{conclusion.tex}
-
 
 \section*{References}
 
