movido main do journal IEEE-2015

--- a/doc/pubs/IEEE-TPD2015/main_old.tex
+++ b/doc/pubs/IEEE-TPD2015/main_old.tex
@@ -1,5 +1,5 @@
 %\documentclass[review]{elsarticle}
-\documentclass[review]{IEEEtran}
+\documentclass[journal]{IEEEtran}
 
 \usepackage{lineno,hyperref}
 \usepackage{amssymb}
