Versao 1 do paper IEEE-2015

--- a/doc/pubs/IEEE-TPD2015/abstract.tex
+++ b/doc/pubs/IEEE-TPD2015/abstract.tex
@@ -1,4 +1,4 @@
-\begin{abstract}
+%\begin{abstract}
 Electricity losses during distribution due to non-technical sources are among the major causes of 
 profit loss for electricity distribution companies (EDCOs). In Brasil, part of that profit loss can be
 recovered through an increase in the energy bill. However, the maximum value of that increase is 
@@ -15,8 +15,8 @@ artificial instances. Two heuristics are then proposed, the first
 based in a greedy approach and the second based on the Tabu Search metaheuristic, and applied
 to the problem. Finally, the three approaches are compared considering the quality of the
 solutions found.
-\end{abstract}
+%\end{abstract}
 
-\begin{keyword}
-OR in energy, Combinatorial optimization, Metaheuristics
-\end{keyword}
+%\begin{keyword}
+%OR in energy, Combinatorial optimization, Metaheuristics
+%\end{keyword}
