--- a/doc/pubs/IEEE-TPD2015/exp_data.tex
+++ b/doc/pubs/IEEE-TPD2015/exp_data.tex
@@ -42,7 +42,7 @@ one, there is no correlation between an action's cost and it's profit. The total
 action's loss reduction curve, using the normalized array created before.
 
 \begin{spacing}{1.2}
-\begin{algorithm}[H]
+\begin{algorithm}[h]
 \caption{Instance Generator}
 \label{alg:gen}
 \KwIn{$Y$, $A$, $R$, $\alpha$}
