--- a/doc/pubs/IEEE-TPD2015/exp_result.tex
+++ b/doc/pubs/IEEE-TPD2015/exp_result.tex
@@ -37,27 +37,33 @@ instances during the CPLEX execution, varying from the combinations of actions/y
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/0.0-1-ntrv.tex}}
     \subfloat[2 resources]{\input{imgs/exp/0.0-2-ntrv.tex}}
     \subfloat[4 resources]{\input{imgs/exp/0.0-4-ntrv.tex}}
+  }
   \caption{Ratio of strongly correlated instances interrupted ($\alpha = 0.0$).}
   \label{fig:result00}
 \end{figure}
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/0.1-1-ntrv.tex}}
     \subfloat[2 resources]{\input{imgs/exp/0.1-2-ntrv.tex}}
     \subfloat[4 resources]{\input{imgs/exp/0.1-4-ntrv.tex}}
+  }
   \caption{Ratio of weakly correlated instances interrupted ($\alpha = 0.1$).}
   \label{fig:result01}
 \end{figure}
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/1.0-1-ntrv.tex}}
     \subfloat[2 resources]{\input{imgs/exp/1.0-2-ntrv.tex}}
     \subfloat[4 resources]{\input{imgs/exp/1.0-4-ntrv.tex}}
+  }
   \caption{Ratio of uncorrelated instances interrupted ($\alpha = 1.0$).}
   \label{fig:result10}
 \end{figure}
@@ -89,27 +95,33 @@ to present the results obtained with GALP.
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/0.0-1-tabusolcomp.tex}}
     \subfloat[2 resources]{\input{imgs/exp/0.0-2-tabusolcomp.tex}}
     \subfloat[4 resources]{\input{imgs/exp/0.0-4-tabusolcomp.tex}}
+  }
   \caption{TSLP solution quality on strongly correlated instances ($\alpha = 0.0$).}
   \label{fig:tabusolcomp00}
 \end{figure}
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/0.1-1-tabusolcomp.tex}}
     \subfloat[2 resources]{\input{imgs/exp/0.1-2-tabusolcomp.tex}}
     \subfloat[4 resources]{\input{imgs/exp/0.1-4-tabusolcomp.tex}}
+  }
   \caption{TSLP solution quality on weakly correlated instances ($\alpha = 0.1$).}
   \label{fig:tabusolcomp01}
 \end{figure}
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/1.0-1-tabusolcomp.tex}} 
     \subfloat[2 resources]{\input{imgs/exp/1.0-2-tabusolcomp.tex}}
     \subfloat[4 resources]{\input{imgs/exp/1.0-4-tabusolcomp.tex}}
+  }
   \caption{TSLP solution quality on uncorrelated instances ($\alpha = 1.0$).}
   \label{fig:tabusolcomp10}
 \end{figure}
@@ -131,27 +143,33 @@ the influence of the number of years was also not significant, as observed on th
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/0.0-1-greedysolcomp.tex}} 
     \subfloat[2 resources]{\input{imgs/exp/0.0-2-greedysolcomp.tex}}
     \subfloat[4 resources]{\input{imgs/exp/0.0-4-greedysolcomp.tex}} 
+  }
   \caption{GALP solution quality on strongly correlated instances ($\alpha = 0.0$).}
   \label{fig:greedysolcomp00}
 \end{figure}
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/0.1-1-greedysolcomp.tex}} 
     \subfloat[2 resources]{\input{imgs/exp/0.1-2-greedysolcomp.tex}}
     \subfloat[4 resources]{\input{imgs/exp/0.1-4-greedysolcomp.tex}}
+  }
   \caption{GALP solution quality on weakly correlated instances ($\alpha = 0.1$).}
   \label{fig:greedysolcomp01}
 \end{figure}
 
 \begin{figure}[H]
   \centering
+  \resizebox{\columnwidth}{!}{%
     \subfloat[1 resource]{\input{imgs/exp/1.0-1-greedysolcomp.tex}} 
     \subfloat[2 resources]{\input{imgs/exp/1.0-2-greedysolcomp.tex}}
     \subfloat[4 resources]{\input{imgs/exp/1.0-4-greedysolcomp.tex}}
+  }
   \caption{GALP solution quality on uncorrelated instances ($\alpha = 1.0$).}
   \label{fig:greedysolcomp10}
 \end{figure}
