--- a/doc/pubs/IEEE-TPD2015/intro.tex
+++ b/doc/pubs/IEEE-TPD2015/intro.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 \label{sec:intro}
 
-One of the biggest problems Electricity Distribution Companies (EDCOs) face is that of electricity loss due to non-technical
+\IEEEPARstart{O}{ne} of the biggest problems Electricity Distribution Companies (EDCOs) face is that of electricity loss due to non-technical
 sources. Those \textit{non-technical losses}, caused mainly by factors unrelated to the electricity transmission process 
 (like frauds or broken power meters), represented about 13\% of all electricity distributed in 2012, according to a regional Brazilian distribution company~\cite{ANEEL2012}.
 
