--- a/doc/pubs/IEEE-TPD2015/model.tex
+++ b/doc/pubs/IEEE-TPD2015/model.tex
@@ -111,15 +111,15 @@ The resulting problem obtained by the concatenation of equations~\ref{eq:rec} to
     \begin{equation}
     \label{eq:pmmlpo++}
       \begin{aligned}
-	 & \underset{\bar{x}}{\text{maximize}}  & & \sum_{i=1}^{M} \frac{V_i(\bar{x}) - C_i(\bar{x})}{(1 + r)^i}	 					& \textit{(NPV)} \\
-	 & \text{subject to} 			& & \sum_{j=1}^{N} x_{j, i} \cdot c_{j,l} \le o_{i,l} \, \; \forall i, l 					& \textit{(Yearly Budgets)} \\
-	 & 					& & \sum_{i=1}^{M} x_{j, i} \le m_j \, \; \forall j 								& \textit{(Market)} \\
-	 & 					& & x_{j, i} \le u_{j, i} \, \; \forall j, i 									& \textit{(Yearly Market)} \\
-	 & 					& & \sum_{j=1}^{N} \sum_{k=1}^{i}R_{i,j,k}(\bar{x}) \leq g_i \, \; \forall i 					& \textit{(Goals)} \\
-	 & 					& & \sum_{i=1}^{k} x_{d, i} \ge \sum_{i'=1}^{k} x_{j, i'} \cdot Q_{j, d} \, \; \forall d \in D_j\;  \forall j,k & \textit{(Dependencies)}\\
-	 & \text{where}				& &  R_{i,j,k}(\bar{x}) = x_{j, k} \cdot e_{j, i - k + 1} 							& \textit{(Energy Recovery)}\\
-	 & 					& & V_{i}(\bar{x}) = \sum_{j=1}^{N} \sum_{k=1}^{i} R_{i, j, k}(\bar{x}) \cdot v_j 				& \textit{(Yearly Profit)}\\
-	 & 					& & C_{i}(\bar{x}) = \sum_{j=1}^{N} \sum_{l=1}^{L} x_{j, i} \cdot c_{j,l} 					& \textit{(Yearly Cost)}\\
+	 & \underset{\bar{x}}{\text{max}}  & & \sum_{i=1}^{M} \frac{V_i(\bar{x}) - C_i(\bar{x})}{(1 + r)^i}	\hspace{25ex} \textit{\scriptsize (NPV)} \\
+	 & \text{s. to} 			& & \sum_{j=1}^{N} x_{j, i} \cdot c_{j,l} \le o_{i,l} \, \; \forall i, l \hspace{15ex} \textit{\scriptsize (Yearly Budgets)} \\
+	 & 					& & \sum_{i=1}^{M} x_{j, i} \le m_j \, \; \forall j 			\hspace{25ex} \textit{\scriptsize (Market)} \\
+	 & 					& & x_{j, i} \le u_{j, i} \, \; \forall j, i 			\hspace{22ex} \textit{\scriptsize (Yearly Market)} \\
+	 & 					& & \sum_{j=1}^{N} \sum_{k=1}^{i}R_{i,j,k}(\bar{x}) \leq g_i \, \; \forall i    \hspace{18ex}  \textit{\scriptsize (Goals)} \\
+	 & 					& & \sum_{i=1}^{k} x_{d, i} \ge \sum_{i'=1}^{k} x_{j, i'} \cdot Q_{j, d} \, \; \forall d \in D_j\;  \forall j,k  \hspace{4ex} \textit{\scriptsize (Deps.)}\\
+	 & \text{where}				& &  R_{i,j,k}(\bar{x}) = x_{j, k} \cdot e_{j, i - k + 1} 	\hspace{10ex}  \textit{\scriptsize (Energy Recovery)}\\
+	 & 					& & V_{i}(\bar{x}) = \sum_{j=1}^{N} \sum_{k=1}^{i} R_{i, j, k}(\bar{x}) \cdot v_j   \hspace{10ex}  \textit{\scriptsize (Yearly Profit)}\\
+	 & 					& & C_{i}(\bar{x}) = \sum_{j=1}^{N} \sum_{l=1}^{L} x_{j, i} \cdot c_{j,l}   \hspace{15ex} \textit{\scriptsize (Yearly Cost)}\\
 	 & 					& & x_{j,i} \in N, \quad i \le M, \quad j \le N, \quad l \le L
       \end{aligned}
     \end{equation}
