--- a/doc/eld/prova2/prova2a.tex
+++ b/doc/eld/prova2/prova2a.tex
@@ -5,6 +5,8 @@
 \usepackage{multicol}
 \usepackage{graphicx}
 
+\graphicspath{{figs/}}
+
 \newcommand{\exerc}[3]{ \vspace*{25pt} {$\mathbf{#1)}$} #2 \hfill {\it #3} }
 \newcommand{\exitem}[2]{ \texttt{\bf #1)} #2 \\ }
 \newcommand*\xor{\mathbin{\oplus}}
