--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -4,7 +4,8 @@
 %\usepackage{lineno,hyperref}
 \usepackage{amssymb}
 \usepackage{amsmath}
-\usepackage[longend,linesnumbered]{algorithm2e}
+%\usepackage[longend,linesnumbered]{algorithm2e}
+\usepackage{algorithmic}
 \usepackage{subfig}
 \usepackage{pstricks}
 \usepackage{setspace}
@@ -16,6 +17,9 @@
 \usepackage{float}
 
 \hyphenation{op-tical net-works semi-conduc-tor}
+
+\renewcommand{\algorithmicrequire}{\textbf{Input:}}
+\renewcommand{\algorithmicensure}{\textbf{Output:}}
 
 \begin{document}
 
