--- a/doc/pubs/IEEE-TPD2015/exp_data.tex
+++ b/doc/pubs/IEEE-TPD2015/exp_data.tex
@@ -41,56 +41,7 @@ is strongly correlated to the action's total cost, in other words, costlier acti
 one, there is no correlation between an action's cost and it's profit. The total electricity loss is then divided by the number of years to generate the 
 action's loss reduction curve, using the normalized array created before.
 
-\begin{spacing}{1.2}
-\begin{algorithm}[h]
-\caption{Instance Generator}
-\label{alg:gen}
-\KwIn{$Y$, $A$, $R$, $\alpha$}
-\KwOut{Generated instance}
-\Begin{
-    $r \gets 0.10$ \\
-    \For {$a=1$ to $A$}{ \label{alg:gen:line:actionbegin}
-      $v_a \gets RandomReal(1.0, 2.0)$ \label{alg:gen:line:actionvalue}
-      
-      \For {$y=1$ to $Y$}{ 
-	  $u_{a,y} \gets RandomInteger(0, 50)$  \label{alg:gen:line:market}
-      }
-      
-      $m_{a} \gets 0.9 * Sum(u_{a})$ \label{alg:gen:line:uc}
-      
-      \For {$r=1$ to $R$}{
-	  $c_{a,r} \gets RandomReal(1.0, 100.0)$ \label{alg:gen:line:cost}
-      }
-      
-      \For {$y=1$ to $Y$}{ \label{alg:gen:line:vectorbegin}
-	  $W_{y} \gets RandomReal(0.0, 1.0)$
-      }
-      
-      \For {$y=1$ to $Y$}{
-	  $W_{y} \gets W_{y}/Sum(W_y)$
-      } \label{alg:gen:line:vectorend}
-      
-      \For {$y=1$ to $Y$}{
-	  $e_{a,y} \gets ((1 - \alpha) \times ((2 \times Sum(c_{a}) + 10)/v_a) + (\alpha \times RandomReal(1.0, 100.0) \times R)) \times W_{y} \times (1 + r)^y$ \label{alg:gen:line:rec}
-      }
-    
-    } \label{alg:gen:line:actionend}
-    
-    \For {$y=1$ to $Y$} {\label{alg:gen:line:budgbegin}
-	$aux \gets 0.5 * Sum(e_{y})/Y$ \\
-	$g_{y} \gets RandomReal(0.95*aux, 1.05*aux)$ \\
-	\For {$r=1$ to $R$} {
-	    $aux \gets 0.5 * Sum(c_{y,r})/Y$
-	    $o_{y,r} \gets RandomReal(0.95*aux, 1.05*aux)$
-	}
-    } \label{alg:gen:line:budgend}
-
-    \For {$i=1$ to $A/10$} {
-	GenerateDependency() \label{alg:gen:line:deps}
-    }
-}
-\end{algorithm}
-\end{spacing}
+\input{alg-gen.tex}
 
 At the second part, between lines~\ref{alg:gen:line:budgbegin} and~\ref{alg:gen:line:budgend}, the loss reduction goals and the budgets for
 each resource are created, for each year. Yearly goals are created as half the sum of all electricity recovered by all actions, divided 
