artigo IEEE-TPD e ELDprovafinal

--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -12,6 +12,8 @@
 \usepackage{graphics}
 \usepackage{array}
 
+\usepackage{flushend}
+
 %\modulolinenumbers[5]
 
 \usepackage{float}
@@ -63,6 +65,8 @@ OR in energy, combinatorial optimization, metaheuristics
 
 \bibliographystyle{ieeetr}
 \bibliography{mybibfile}
+
+\flushend
 
 \end{document}
 
