--- a/doc/pubs/IEEE-TPD2015/alg-tabu.tex
+++ b/doc/pubs/IEEE-TPD2015/alg-tabu.tex
@@ -1,5 +1,4 @@
 \begin{figure}
-
 \begin{algorithmic}[1]
 \REQUIRE Initial Solution: $S_{initial}$
 \ENSURE Best Solution: $S_{best}$
@@ -19,13 +18,12 @@
   \IF{$S_{current} \geq S_{best}$}
     \STATE $S_{best} \gets S_{current}$
       \label{alg:tabu:melhor}
-     \STATE$ResetTabuList()$
+     \STATE $ResetTabuList()$
   \ENDIF
-  }\label{alg:tabu:fimloop}
-  return $S_{best}$
+\ENDWHILE
+  \label{alg:tabu:fimloop}
 \RETURN $S_{best}$
 \end{algorithmic}
-
 \caption{Tabu Search}
 \label{alg:tabu}
 \end{figure}
