prova final ELD

--- a/doc/eld/prova-final/provafinal.tex
+++ b/doc/eld/prova-final/provafinal.tex
@@ -42,14 +42,12 @@
 {\bf Professor:} Marcos Daniel Baroni
 {\bf Data:} 10/12/2015
 
-% 1. Conversão sistemas numéricos (+complemento de 2)
-% 2. Algebra de boole (Simplificação)
-% 3. Contador assíncrono
-% 4. Projeto de contador síncrono
-% 5. Circuito interno de RAM (Expansão?)
-% 6. Atributos de uma memória RAM
-% 7. Curva do flip-flop JK (??)
-% 8. Tabela verdade de somador
+% 1. Álgebra de boole (Simplificação)
+% 2. Tabela verdade de somador
+% 3. Projeto de contador síncrono (utilizando flip-flop JK)
+% 5. RAM:
+%  5.1. Expansão de uma memória RAM
+%  5.2. Atributos (capacidade total, end. inicial e final)
 
 \end{document}
 
