--- a/doc/eld/prova-final/provafinal.tex
+++ b/doc/eld/prova-final/provafinal.tex
@@ -42,12 +42,50 @@
 {\bf Professor:} Marcos Daniel Baroni
 {\bf Data:} 10/12/2015
 
+\exerc{1}{Simplifique as expressão abaixo utilizando álgebra de Boole.}{(2.5 pontos)}
+\\ \hspace*{3em} \exitem{a}{ $S = \neg{A}B + C\neg{D}$ }
+   \hspace*{3em} \exitem{b}{ $S = \neg{A}B + C\neg{D}$ }
+
+\exerc{2}{Implemente a tabela verdade de um somador completo.}{(2.5 pontos)}
+\begin{multicols}{2}
+  \begin{tabular}{|c|c|c||c|c|}
+    \hline
+    $A$ & $B$ & $T_e$ & $S$ & $T_s$ \\ \hline
+    $0$ & $0$ & $0$ & & \\ \hline
+    $0$ & $0$ & $1$ & & \\ \hline
+    $0$ & $1$ & $0$ & & \\ \hline
+    $0$ & $1$ & $1$ & & \\ \hline
+    $1$ & $0$ & $0$ & & \\ \hline
+    $1$ & $0$ & $1$ & & \\ \hline
+    $1$ & $1$ & $0$ & & \\ \hline
+    $1$ & $1$ & $1$ & & \\ \hline
+  \end{tabular}
+\end{multicols}
+
+\exerc{3}{Projete um contador síncrono que execute a sequência abaixo.}{(2.5 pontos)}
+
+\exerc{4}{Utilizando blocos RAM 64x4, esquematize uma RAM 64x8.}{(2.5 pontos)}
+\\ \exitem{a}{.}
+   \exitem{b}{
+\begin{tabular}{|l|c|c|}
+ \cline{2-2}
+ \multicolumn{1}{c|}{} & {\bf RAM 64x8} \\ \hline
+ Capacidade total (em bits) & \phantom{aaaaaaaaaaaaaa} \\ \hline
+ Largura de palavra de dados & \\ \hline
+ Largura da barra de endereços & \\ \hline
+ Palavra de endereço inicial & \\ \hline
+ Palavra de endereço final & \\ \hline
+\end{tabular}
+}
+
 % 1. Álgebra de boole (Simplificação)
+%  1.1.
+%  1.2.
 % 2. Tabela verdade de somador
 % 3. Projeto de contador síncrono (utilizando flip-flop JK)
-% 5. RAM:
-%  5.1. Expansão de uma memória RAM
-%  5.2. Atributos (capacidade total, end. inicial e final)
+% 4. RAM:
+%  4.1. Expansão de uma memória RAM
+%  4.2. Atributos (capacidade total, end. inicial e final)
 
 \end{document}
 
