Reduzindo TPD. adicionado CEC2016

--- a/doc/pubs/IEEE-TPD2015/exp_result.tex
+++ b/doc/pubs/IEEE-TPD2015/exp_result.tex
@@ -35,6 +35,7 @@ shows the instances with certain number of resources. The colors on the heatmaps
 instances during the CPLEX execution, varying from the combinations of actions/years where no instance was interrupted 
 (paler squares) to the combinations where all instances were interrupted (darker squares).
 
+\figpar
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
@@ -46,6 +47,7 @@ instances during the CPLEX execution, varying from the combinations of actions/y
   \label{fig:result00}
 \end{figure}
 
+\figspaces
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
@@ -57,6 +59,7 @@ instances during the CPLEX execution, varying from the combinations of actions/y
   \label{fig:result01}
 \end{figure}
 
+\figspaces
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
@@ -93,6 +96,7 @@ the average ratio between the solutions found by the TSLP and the best known sol
 with better quality were found by the TSLP. The same representations are used on figures~\ref{fig:greedysolcomp00} to \ref{fig:greedysolcomp10} 
 to present the results obtained with GALP.
 
+\figpar
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
@@ -104,6 +108,7 @@ to present the results obtained with GALP.
   \label{fig:tabusolcomp00}
 \end{figure}
 
+\figspaces
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
@@ -115,6 +120,7 @@ to present the results obtained with GALP.
   \label{fig:tabusolcomp01}
 \end{figure}
 
+\figspaces
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
@@ -141,6 +147,7 @@ Once again, it is possible to see a reduction on the quality of the solutions fo
 the instances are increased. Besides, increasing the number of actions on the instances also enabled GALP to find better solutions, and
 the influence of the number of years was also not significant, as observed on the TSLP tests.
 
+\figpar
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
@@ -152,6 +159,7 @@ the influence of the number of years was also not significant, as observed on th
   \label{fig:greedysolcomp00}
 \end{figure}
 
+\figspaces
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
@@ -163,6 +171,7 @@ the influence of the number of years was also not significant, as observed on th
   \label{fig:greedysolcomp01}
 \end{figure}
 
+\figspaces
 \begin{figure}[H]
   \centering
   \resizebox{\columnwidth}{!}{%
