--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -22,6 +22,8 @@
 
 \renewcommand{\algorithmicrequire}{\textbf{Input:}}
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
+\newcommand{\figpar}{\vspace*{-3mm}}
+\newcommand{\figspaces}{\vspace*{-6mm}}
 
 \begin{document}
 
