--- a/doc/pubs/IEEE-TPD2015/exp_data.tex
+++ b/doc/pubs/IEEE-TPD2015/exp_data.tex
@@ -13,8 +13,14 @@ adjusted to build instances of different sizes and characteristics. It receives 
   \item $R$, the number of budgets or resources (dimensions);
   \item $\alpha$, the level of correlation between each action's cost and profit.
 \end{itemize}
-
-The first step on instance generation is the actions generation.
+After those input parameters the instance generation procedure follows three steps.
+At first the actions characteristics are generated (recovery curve, costs, markets and electricity value)
+using uniform distributions with variations similar to those found in real context.
+The second step is to compute yearly goals and yearly budgets,
+based on total sums of the characteristics of the actions.
+The last step generates some random dependencies between actions.
+This is done avoiding cyclical dependencies, as any action involved in a cyclical 
+dependency would never be chosen.
 
 %The algorithm for the instance generator is composed of three parts: the actions generation,
 %the budgets and goals generation and the dependencies generation. When the actions are 
