--- a/doc/pubs/IEEE-TPD2015/exp_data.tex
+++ b/doc/pubs/IEEE-TPD2015/exp_data.tex
@@ -13,7 +13,7 @@ adjusted to build instances of different sizes and characteristics. It receives 
   \item $R$, the number of budgets or resources (dimensions);
   \item $\alpha$, the level of correlation between each action's cost and profit.
 \end{itemize}
-After those input parameters the instance generation procedure follows three steps.
+After those input parameters, the instance generation procedure follows three steps.
 At first the actions characteristics are generated (recovery curve, costs, markets and electricity value)
 using uniform distributions with variations similar to those found in real context.
 The second step is to compute yearly goals and yearly budgets,
