--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -25,14 +25,16 @@
 \newcommand{\figpar}{\vspace*{-3mm}}
 \newcommand{\figspaces}{\vspace*{-7mm}}
 
+\IEEEoverridecommandlockouts
+
 \begin{document}
 
 \title{An Empirical Comparison of three Computational Approaches for Minimizing Losses on Electricity Distribution}
 
 \author{Jo\~ao Carlos.~H.~Moreira,
-	Marcos Daniel.~V.~Baroni,
+	Marcos Daniel.~V.~Baroni\thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.},
 	Fl\'avio~M.~Varej\~ao,
-\thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.}}
+}
 
 \markboth{IEEE TRANSACTIONS ON POWER DELIVERY ,Vol.~--, No.~--, --~2015}%
 {Moreira \MakeLowercase{\textit{et al.}}: An Empirical Comparison of three Computational Approaches for Minimizing Losses on Electricity Distribution}
@@ -56,6 +58,9 @@ OR in energy, combinatorial optimization, metaheuristics
 \input{exp_data.tex}
 \input{exp_result.tex}
 \input{conclusion.tex}
+
+\section*{Acknowledgement}
+The authors wish to thank EDP Energias do Brasil S.A. for cooperation in this research.
 
 % Can use something like this to put references on a page
 % by themselves when using endfloat and the captionsoff option.
