cover letter para TPD.

--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -29,7 +29,7 @@
 
 \begin{document}
 
-\title{An Empirical Comparison of three Computational Approaches for Minimizing Losses on Electricity Distribution}
+\title{An Experimental Analysis of three Computational Approaches for Minimizing Losses on Electricity Distribution}
 
 \author{Jo\~ao Carlos.~H.~Moreira,
 	Marcos Daniel.~V.~Baroni\thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.},
@@ -37,7 +37,7 @@
 }
 
 \markboth{IEEE TRANSACTIONS ON POWER DELIVERY ,Vol.~--, No.~--, --~2015}%
-{Moreira \MakeLowercase{\textit{et al.}}: An Empirical Comparison of three Computational Approaches for Minimizing Losses on Electricity Distribution}
+{Moreira \MakeLowercase{\textit{et al.}}: An Experimental Analysis of three Computational Approaches for Minimizing Losses on Electricity Distribution}
 
 \maketitle
 
