--- a/doc/pubs/IEEE-TPD2015/cover-letter.tex
+++ b/doc/pubs/IEEE-TPD2015/cover-letter.tex
@@ -1,31 +1,37 @@
 \documentclass{letter}
 
-\begin{document}
+\signature{Jo\~ao Carlos.~H.~Moreira, M.Sc.}
+\address{
 Departamento de Inform\'atica\\
 Universidade Federal do Esp\'irito Santo\\
-Vit\'oria, ES, Brazil\\
-January 7, 2016\\
+Vit\'oria, ES, Brazil
+}
 
-Dr. Ed Etor, Editor
-Name of Journal
-Street Address
-City, State zipcode
+\begin{document}
 
-Dear Dr. Etor:
+\begin{letter}{
+Wilsun Xu, Ph.D.,\\
+Editor-in-Chief\\
+IEEE Transactions on Power Delivery
+}
+
+\opening{Dear Dr. Wilsum Xu:}
 
 Please find enclosed a manuscript entitled:
 ``An Experimental Analysis of three Computational Approaches for Minimizing Losses on Electricity Distribution''
- which I am submitting for exclusive consideration of publication as an article in IEEE Transactions on Power Delivery.
+which I am submitting for exclusive consideration of publication as an article in IEEE Transactions on Power Delivery.
 
-The paper demonstrates ... .
-As such this paper should be of interest to a broad readership including those
-interested in [what kinds of research, topics, techniques - should be those targeted by the journal].
+The manuscript approaches a combinatorial problem that aims to reduce non-technical losses in power distribution,
+analysing its hardness through computational experiments.
+
+As such this paper should be of interest to those interested in loss
+reduction on energy distribution.
 
 Thank you for your consideration of our work.
 
-Sincerely,
+\closing{Sincerely,}
 
-Jo\~ao Carlos.~H.~Moreira, M.Sc.
 
+\end{letter}
 \end{document}
 
