artigo submetido para IEEE-TPD

--- a/doc/pubs/IEEE-TPD2015/cover-letter.tex
+++ b/doc/pubs/IEEE-TPD2015/cover-letter.tex
@@ -21,11 +21,12 @@ Please find enclosed a manuscript entitled:
 ``An Experimental Analysis of three Computational Approaches for Minimizing Losses on Electricity Distribution''
 which I am submitting for exclusive consideration of publication as an article in IEEE Transactions on Power Delivery.
 
-The manuscript approaches a combinatorial problem that aims to reduce non-technical losses in power distribution,
-analysing its hardness through computational experiments.
+The manuscript approaches a combinatorial problem that aims to reduce
+non-technical losses in power distribution.
 
 As such this paper should be of interest to those interested in loss
-reduction on energy distribution.
+reduction on energy distribution, helping other power distribution companies to
+solve similar problems when planning actions to reduce energy loss.
 
 Thank you for your consideration of our work.
 
