--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -1,5 +1,5 @@
 %\documentclass[journal]{IEEEtran}
-\documentclass[peerreview]{IEEEtran}
+\documentclass{IEEEtran}
 
 %\usepackage{lineno,hyperref}
 \usepackage{amssymb}
@@ -12,7 +12,7 @@
 \usepackage{graphics}
 \usepackage{array}
 
-\usepackage{flushend}
+%\usepackage{flushend}
 
 %\modulolinenumbers[5]
 
@@ -73,7 +73,7 @@ The authors wish to thank EDP Energias do Brasil S.A. for cooperation in this re
 \bibliographystyle{ieeetr}
 \bibliography{mybibfile}
 
-\flushend
+%\flushend
 
 \end{document}
 
